最新页面 更新 search_job.html                 //找工作 talents_list.html               //招人才 help.html                       //新手帮助 complain.html                   //投诉建议
personal.html                   //个人中心

--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/ie8.css" />
     <![endif]-->
 </head>
-<body>
+<body class="pt97">
 <!-- header -->
 <div class="header normal">
     <div class="container">
@@ -21,15 +21,16 @@
                 <img src="images/logo.png" alt="LOGO" />
             </a>
             <ul class="lr">
+                <li class="btn-menu"><a href="javascript:;">导航</a></li>
                 <li><a href="login.html" class="login">登录</a></li>
                 <li><a href="register.html">注册</a></li>
             </ul>
             <ul class="nav">
                 <li class="active"><a href="index.html">首页</a></li>
-                <li><a href="javascript:;">找工作</a></li>
-                <li><a href="javascript:;">招人才</a></li>
-                <li><a href="javascript:;">新手帮助</a></li>
-                <li><a href="javascript:;">投诉建议</a></li>
+                <li><a href="search_job.html">找工作</a></li>
+                <li><a href="talents_list.html">招人才</a></li>
+                <li><a href="help.html">新手帮助</a></li>
+                <li><a href="complain.html">投诉建议</a></li>
             </ul>
             <div class="clearfix"></div>
         </div>
