最新页面提交  具体看remark.txt

--- a/website/job_detail.html
+++ b/website/job_detail.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
     <meta charset="utf-8">
-    <title>投诉建议 - 百百SOHO</title>
+    <title>找工作 - 百百SOHO</title>
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <!--[if lt IE 9]>
     <link rel="stylesheet" type="text/css" href="css/ie8.css" />
@@ -41,10 +41,10 @@
             </ul>
             <ul class="nav">
                 <li><a href="index.html">首页</a></li>
-                <li><a href="search_job.html">找工作</a></li>
+                <li class="active"><a href="search_job.html">找工作</a></li>
                 <li><a href="talents_list.html">招人才</a></li>
                 <li><a href="help.html">新手帮助</a></li>
-                <li class="active"><a href="complain.html">投诉建议</a></li>
+                <li><a href="complain.html">投诉建议</a></li>
             </ul>
             <div class="clearfix"></div>
         </div>
@@ -52,15 +52,71 @@
     </div>
 </div>
 <!-- /header -->
-<!-- lr-wrapper -->
-<div class="lr-wrapper">
-    <div class="lr-img"><img src="images/index/banner.png" alt="background-image" /></div>
-</div>
-<!-- /lr-wrapper -->
 <!-- mainer -->
 <div class="mainer pd30">
     <div class="container">
-        mainer
+        <!-- job-detail -->
+        <table class="job-detail">
+            <thead>
+                <th><h3>岗位详情</h3></th>
+                <th><a herf="javascript:;" class="bnt-apply">报名</a></th>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>需求岗位：</th>
+                    <td>Unity UI</td>
+                </tr>
+                <tr>
+                    <th>招聘人数：</th>
+                    <td>3人</td>
+                </tr>
+                <tr>
+                    <th>应用平台</th>
+                    <td>Web PC</td>
+                </tr>
+                <tr>
+                    <th>到岗时间：</th>
+                    <td>一个月后</td>
+                </tr>
+                <tr>
+                    <th>工作时间：</th>
+                    <td>AM 9:00-12:00   &nbsp;&nbsp;   PM 13:00-18:00  &nbsp;&nbsp;  PM 18:00-22:00</td>
+                </tr>
+                <tr>
+                    <th>工作日：</th>
+                    <td>不限</td>
+                </tr>
+                <tr>
+                    <th>项目周期：</th>
+                    <td>大于等于3个月</td>
+                </tr>
+                <tr>
+                    <th>薪资待遇：</th>
+                    <td>8,000-10,000元/月</td>
+                </tr>
+                <tr>
+                    <th>工作餐：</th>
+                    <td>有</td>
+                </tr>
+                <tr>
+                    <th>工作内容：</th>
+                    <td>3年以上程序员，PHP语言，JAVE语言精通。3年以上程序员，PHP语言，JAVE语言精通。3年以上程序员，PHP语言，JAVE语言精通。3年以上程序员，PHP语言，JAVE语言精通。3年以上程序员，PHP语言，JAVE语言精通。3年以上程序员，PHP语言，JAVE语言精通。3年以上程序员，PHP语言，JAVE语言精通。3年以上程序员，PHP语言，JAVE语言精通。</td>
+                </tr>
+                <tr>
+                    <th>工作地址：</th>
+                    <td>江苏省南京市秦淮区C区2</td>
+                </tr>
+                <tr>
+                    <th>联系人：</th>
+                    <td>张先生</td>
+                </tr>
+                <tr>
+                    <th>联系电话：</th>
+                    <td>16888886666</td>
+                </tr>
+            </tbody>
+        </table>
+        <!-- /job-detail -->
     </div>
 </div>
 <!-- /mainer -->
@@ -114,9 +170,9 @@
 <script type="text/javascript" src="js/jquery.form.min.js"></script>
 <script type="text/javascript" src="js/jquery.extends.1.0.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
+<script type="text/javascript" src="js/package/search_job.js"></script>
 <!--[if lt IE 9]>
 <script type="text/javascript" src="js/bootstrap/html5shiv.min.js"></script>
 <script type="text/javascript" src="js/bootstrap/respond.min.js"></script>
-<![endif]-->
 </body>
 </html>
