--- a/website/talents_list.html
+++ b/website/talents_list.html
@@ -27,7 +27,14 @@
                         <dt><a href="personal.html"><img src="images/img_01.png" alt="head" /><span></span></a></dt>
                         <dd>
                             <a href="personal.html" class="username">Joyce</a>
-                            <a href="javascript:;" class="exit">退出</a>
+                            <ul class="top-menu">
+                                <li><a href="workbench.html">我的工作</a></li>
+                                <li>&nbsp;</li>
+                                <li><a href="personal.html">个人信息</a></li>
+                                <li><a href="myResume.html">我的简历</a></li>
+                                <li><a href="javascript:;" data-toggle="modal" data-target="#systemMsg">系统消息</a></li>
+                                <li><a href="javascript:;" class="exit">退出</a></li>
+                            </ul>
                         </dd>
                     </dl>
                 </li>
@@ -193,7 +200,7 @@
             <div class="row">
                 <dl>
                     <dt>
-                        <a href="javascript:;" class="tit">Unity程序员</a>
+                        <a href="job_detail.html" class="tit">Unity程序员</a>
                         <span class="grade">综合评分：<span class="orange">80分</span></span>
                     </dt>
                 </dl>
@@ -237,7 +244,7 @@
             <div class="row">
                 <dl>
                     <dt>
-                        <a href="javascript:;" class="tit">Unity程序员</a>
+                        <a href="job_detail.html" class="tit">Unity程序员</a>
                         <span class="grade">综合评分：<span class="orange">80分</span></span>
                     </dt>
                 </dl>
@@ -281,7 +288,7 @@
             <div class="row">
                 <dl>
                     <dt>
-                        <a href="javascript:;" class="tit">Unity程序员</a>
+                        <a href="job_detail.html" class="tit">Unity程序员</a>
                         <span class="grade">综合评分：<span class="orange">80分</span></span>
                     </dt>
                 </dl>
@@ -325,7 +332,7 @@
             <div class="row">
                 <dl>
                     <dt>
-                        <a href="javascript:;" class="tit">Unity程序员</a>
+                        <a href="job_detail.html" class="tit">Unity程序员</a>
                         <span class="grade">综合评分：<span class="orange">80分</span></span>
                     </dt>
                 </dl>
@@ -369,7 +376,7 @@
             <div class="row">
                 <dl>
                     <dt>
-                        <a href="javascript:;" class="tit">Unity程序员</a>
+                        <a href="job_detail.html" class="tit">Unity程序员</a>
                         <span class="grade">综合评分：<span class="orange">80分</span></span>
                     </dt>
                 </dl>
@@ -413,7 +420,7 @@
             <div class="row">
                 <dl>
                     <dt>
-                        <a href="javascript:;" class="tit">Unity程序员</a>
+                        <a href="job_detail.html" class="tit">Unity程序员</a>
                         <span class="grade">综合评分：<span class="orange">80分</span></span>
                     </dt>
                 </dl>
