--- a/website/help.html
+++ b/website/help.html
@@ -27,7 +27,14 @@
                         <dt><a href="personal.html"><img src="images/img_01.png" alt="head" /><span></span></a></dt>
                         <dd>
                             <a href="personal.html" class="username">Joyce</a>
-                            <a href="javascript:;" class="exit">退出</a>
+                            <ul class="top-menu">
+                                <li><a href="workbench.html">我的工作</a></li>
+                                <li>&nbsp;</li>
+                                <li><a href="personal.html">个人信息</a></li>
+                                <li><a href="myResume.html">我的简历</a></li>
+                                <li><a href="javascript:;" data-toggle="modal" data-target="#systemMsg">系统消息</a></li>
+                                <li><a href="javascript:;" class="exit">退出</a></li>
+                            </ul>
                         </dd>
                     </dl>
                 </li>
