--- a/website/myResume.html
+++ b/website/myResume.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
     <meta charset="utf-8">
-    <title>投诉建议 - 百百SOHO</title>
+    <title>我的简历 - 百百SOHO</title>
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <!--[if lt IE 9]>
     <link rel="stylesheet" type="text/css" href="css/ie8.css" />
@@ -44,7 +44,7 @@
                 <li><a href="search_job.html">找工作</a></li>
                 <li><a href="talents_list.html">招人才</a></li>
                 <li><a href="help.html">新手帮助</a></li>
-                <li class="active"><a href="complain.html">投诉建议</a></li>
+                <li><a href="complain.html">投诉建议</a></li>
             </ul>
             <div class="clearfix"></div>
         </div>
