--- a/website/search_job.html
+++ b/website/search_job.html
@@ -24,13 +24,13 @@
                 <li class="btn-menu"><a href="javascript:;">导航</a></li>
                 <li>
                     <dl class="head">
-                        <dt><a href="personal.html"><img src="images/img_01.png" alt="head" /><span></span></a></dt>
+                        <dt><a href="personal_edit.html"><img src="images/img_01.png" alt="head" /><span></span></a></dt>
                         <dd>
-                            <a href="personal.html" class="username">Joyce</a>
+                            <a href="personal_edit.html" class="username">Joyce</a>
                             <ul class="top-menu">
                                 <li><a href="workbench.html">我的工作</a></li>
                                 <li>&nbsp;</li>
-                                <li><a href="personal.html">个人信息</a></li>
+                                <li><a href="personal_edit.html">个人信息</a></li>
                                 <li><a href="myResume.html">我的简历</a></li>
                                 <li><a href="javascript:;" data-toggle="modal" data-target="#systemMsg">系统消息</a></li>
                                 <li><a href="javascript:;" class="exit">退出</a></li>
